# mipt-de-exam

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dags/: bcwd.py
doc/: SoW.md  research.ipynb
src/common/: log.py  settings.py
src/etl/: fetch.py  load.py  research.ipynb  train.py
src/etl/results/: results.json
